<resources>
    <string name="app_name">TuanChe</string>


    <string name="man_num">%s人</string>
    <string name="man_num_string">本期已报名</string>
    <string name="question_mask">"?"</string>
    <string name="groupbuy_date">具体时间以团长通知为准</string>

    <!--总评分-->
    <string name="comment_num">%s分</string>
    <string name="total_comment_num">查看全部%s人评价</string>

    <string name="location_name">%s站</string>
    <string name="price_content" >1、团长还在帮你砍价，还不确定低价\n2、团购价格比较低，厂家不允许公开，公开后团购可能取消，从而影响团友的利益</string>
    <string name="release_to_refresh" >松开即可刷新</string>
    <string name="pull_down_to_refresh" >下拉刷新...</string>
    <string name="loading" >加载中...</string>
    <string name="no_more_datas" >没有更多数据了</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="brandcar">品牌选车</string>
    <string name="optioncar">条件选车</string>
    <string name="carprice">价格</string>
    <string name="carlevel">级别</string>
    <string name="cnylevel">国别</string>
    <string name="displacement">排量</string>
    <string name="reset">重置</string>
    <string name="checkcar">查看</string>
    <string name="brandhot">热门</string>
    <string name="brandprice">价格</string>
    <string name="loadfail">加载失败</string>

</resources>
