<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bwf.tuanche.ui.carselect.fragment.OptionCarFragment">
    <com.bwf.tuanche.ui.carselect.view.LoadAnimView
        android:id="@+id/lav_option_car"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <ScrollView
        android:id="@+id/slv_option_car"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/carprice"
                    android:textSize="@dimen/lable25" />

                <View
                    android:id="@+id/rlv_carprice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/carlevel"
                    android:textSize="@dimen/lable25" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rlv_carlevel"
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/cnylevel"
                    android:textSize="@dimen/lable25" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rlv_cnylevel"
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/displacement"
                    android:textSize="@dimen/lable25" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rlv_displacement"
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_option_reset"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/reset"
                    android:textSize="@dimen/lable25"
                    android:textColor="@color/white"
                    android:background="@drawable/option_reset" />

                <Button
                    android:id="@+id/btn_option_check"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:textSize="@dimen/lable25"
                    android:text="@string/checkcar"
                    android:textColor="@color/white"
                    android:background="@drawable/option_check" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
